--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
 
         <h2>How to Run</h2>
         <ol>
-            <li>Clone the project repository from <a href="#" target="_blank">GitHub</a>.</li>
+            <li>Clone the project repository from <a href="gui.py" target="gui.py">GitHub</a>.</li>
             <li>Ensure Python is installed on your system.</li>
             <li>Run the <code>python filename.py</code> command to start the application.</li>
         </ol>
 
-        <a href="https://github.com/your-repo-url" target="_blank" class="btn">View on GitHub</a>
+        <a href="https://github.com/Aayushdubey101/miniproject.git" target="_blank" class="btn">View on GitHub</a>
     </div>
 
     <footer>
